--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.7",
+    "randomatic": "^3.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-range-slider-input": "^3.0.7"
